Fix issue with parallax image not showing outside of gitpod server

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -422,7 +422,7 @@ color: #f7ebc7;
 Code assistance from here -------*/
 
 .parallax {
-    background-image: url("/assets/images/own/rowingmhug.jpeg");
+    background-image: url("/RiversideRowingClub/assets/images/own/rowingmhug.jpeg");
     min-height: 300px;
     background-attachment: fixed;
     background-position: center;
